*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences.htm
@@ -14,11 +14,12 @@ Preferences and properties
 <H1>Preferences and properties</H1>
 <P >
 The workbench provides additional extension points
-for contributing specialized dialog pages.&nbsp;&nbsp; Preference pages allow
+for contributing specialized dialog pages.&nbsp;&nbsp; <b>Preference pages</b> allow
 the user to customize a plug-in by selecting values for a plug-in defined set of
 preferences.</P>
 <P >
-Properties pages allow users to see, and possibly edit, the plug-in specific properties of a resource.</P>
+<b>
+Properties pages</b> allow users to see, and possibly edit, the plug-in specific properties of a resource.</P>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
