--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop.htm
@@ -25,23 +25,23 @@ resource navigator view.&nbsp; This menu is available when a single resource is
 selected.&nbsp;</P>
 <P >The readme tool contributes two property pages.</P>
 <font color='#4444CC'><pre>
-   &lt;extension
-      point = &quot;org.eclipse.ui.propertyPages&quot;&gt;
-      &lt;page
-         id=&quot;org.eclipse.ui.examples.readmetool.FilePage&quot;
-         name=&quot;Readme Tool&quot;
-         objectClass=&quot;org.eclipse.core.resources.IFile&quot;
-         class=&quot;org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage&quot;
-         nameFilter=&quot;*.readme&quot;&gt;
-      &lt;/page&gt;
-      &lt;page
-         id=&quot;org.eclipse.ui.examples.readmetool.FilePage2&quot;
-         name=&quot;More Readme Info&quot;
-         objectClass=&quot;org.eclipse.core.resources.IFile&quot;
-         class=&quot;org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage2&quot;
-         nameFilter=&quot;*.readme&quot;&gt;
-      &lt;/page&gt;
-   &lt;/extension&gt;
+&lt;extension
+     point = &quot;org.eclipse.ui.propertyPages&quot;&gt;
+        &lt;page
+           id=&quot;org.eclipse.ui.examples.readmetool.FilePage&quot;
+           name=&quot;%PropertiesPage.filePage&quot;
+	   objectClass=&quot;org.eclipse.core.resources.IFile&quot;
+	   class=&quot;org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage&quot;
+           nameFilter=&quot;*.readme&quot;&gt;
+        &lt;/page&gt;
+         &lt;page
+            id=&quot;org.eclipse.ui.examples.readmetool.FilePage2&quot;
+            name=&quot;%PropertiesPage.filePage2&quot;
+ 	   objectClass=&quot;org.eclipse.core.resources.IFile&quot;
+ 	   class=&quot;org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage2&quot;
+            nameFilter=&quot;*.readme&quot;&gt;
+         &lt;/page&gt;
+  &lt;/extension&gt;
 </pre></font>
 <P >
 Both pages are contributed for objects of type <b><a href="../reference/api/org/eclipse/core/resources/IFile.html"> IFile</a></b> with a
@@ -49,7 +49,7 @@ Both pages are contributed for objects of type <b><a href="../reference/api/org/
 <P >
 Property pages look a lot like preference pages, except there is no hierarchy or categorization of property pages. In the dialog below, both readme property pages appear in the main list of pages.</P>
 <P >
-<img border="0" src="images/readmeproperties.jpg" width="668" height="531"></P>
+<img border="0" src="images/readmeproperties.jpg" width="661" height="532"></P>
 
 
 <H3>
