--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
@@ -16,9 +16,9 @@ can also control several other key aspects of a perspective. These include:</p>
   <li>
     the New menu</li>
   <li>
-    the Perspective &gt; Open menu</li>
+    the Window &gt; Open Perspective menu</li>
   <li>
-    the Perspective &gt; Show View menu</li>
+    the Window &gt; Show View menu</li>
   <li>
     action sets that show up on the toolbar</li>
 </ul>
@@ -39,17 +39,19 @@ can also control several other key aspects of a perspective. These include:</p>
       <td valign="top" align="left">
         <p CLASS="Para"><b>2.</b></td>
       <td valign="top" align="left">
-        <p CLASS="Para">Select Perspective &gt; Customize...&nbsp;</td>
+        <p CLASS="Para">Select Window &gt; Customize Perspective...&nbsp;</td>
     </tr>
     <tr>
       <td valign="top" align="left">
         <p CLASS="Para"><b>3.</b></p>
       </td>
-      <td valign="top" align="left">Expand Other&nbsp;</td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Expand Other&nbsp;</p>
+      </td>
     </tr>
     <tr>
       <td valign="top" align="left"><b>4.</b></td>
-      <td valign="top" align="left">Check Run/Debug and click OK.
+      <td valign="top" align="left">Check Launch and click OK.
         <blockquote>
           <p><img align="texttop" border="0" src="../images/image71_pers_customize.jpg" width="389" height="340"></p>
         </blockquote>
@@ -58,7 +60,7 @@ can also control several other key aspects of a perspective. These include:</p>
     <tr>
       <td valign="top" align="left"><b>5.</b></td>
       <td valign="top" align="left">Observe that the toolbar now
-        includes buttons for run/debug.
+        includes buttons for debug/run launching.
         <blockquote>
           <p><img align="texttop" border="0" src="../images/Image71_pers_rundebug.jpg" width="278" height="153"></p>
         </blockquote>
@@ -68,7 +70,7 @@ can also control several other key aspects of a perspective. These include:</p>
       <td valign="top" align="left"><b>6.</b></td>
       <td valign="top" align="left">When you have finished
         experimenting with the other options on the Customize Perspective dialog choose
-        Perspective &gt; Reset to return the perspective to its original
+        Window &gt; Reset Perspective to return the perspective to its original
         state.&nbsp;
       </td>
     </tr>
