--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52.htm
@@ -58,16 +58,20 @@ already learned about. </P>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>4.</b></td>
-      <td valign="top" align="left">In the Navigator select
-        file1.txt and use Ctrl+C to copy the file.
-        <p>Observe that a new file named &quot;Copy of file1.txt&quot; appears.</td>
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>4.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">In the Navigator select
+        file1.txt and use Ctrl+C to copy the file.</td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>5.</b></td>
-      <td valign="top" align="left">Select &quot;Copy of file1.txt&quot; , popup
-        the menu and choose Rename. Rename the file to be file2.txt.
-        <p>&nbsp;</td>
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>5.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Use Ctrl+V (Paste) to create the copy. In the name
+        conflict dialog which appears, rename the file to be file2.txt.</td>
     </tr>
   </tbody>
 </table>
