--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
@@ -38,6 +38,8 @@ follows:</p>
   This is line 4a and it is new<br>
   This is line 5.</i></p>
 </blockquote>
+<p>Save the contents of the file by choosing File &gt; Save (or pressing
+Ctrl+S).</p>
 <p>Now we're really (honest we are) ready to do a compare. Once again select
 file1.txt and file2.txt and choose Compare With &gt; Each Other in the
 Navigator's context menu.</p>
