--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
@@ -38,8 +38,10 @@ parts to the compare editor's local toolbar. The right group of local toolbar bu
       <td valign="top" align="left">
         <p CLASS="Para"><b>2.</b></p>
       </td>
-      <td valign="top" align="left">Click Select Next
-        Change button a second time to go to the next change.&nbsp;</td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Click Select Next
+        Change button a second time to go to the next change.&nbsp;</p>
+      </td>
     </tr>
     <tr>
       <td valign="top" align="left">
@@ -97,8 +99,7 @@ The Copy current change buttons allow you to merge a single change.&nbsp;&nbsp;<
       </td>
       <td valign="top" align="left">Close the compare editor and
         choose Yes to save the changes. Alternatively you can save the changes
-        by choosing Save from the popup menu of the text area for
-        file1.txt.&nbsp;
+        by choosing File &gt; Save (Ctrl+S).&nbsp;
       </td>
     </tr>
   </tbody>
