--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -17,7 +17,7 @@ this workbench window:</p>
     Using the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" width="0" height="0">
     on the shortcut bar.</li>
   <li>
-    Choosing a perspective from the Perspective &gt; Open menu.</li>
+    Choosing a perspective from the Perspective &gt; Open menu.&nbsp;</li>
 </ul>
 <table BORDER="0" cellspacing="0" cellpadding="3">
   <thead>
