--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
@@ -30,15 +30,16 @@ workbench also allows you to save this layout for future use.</P>
       <td valign="top" align="left">
         <p CLASS="Para"><b>2.</b></td>
       <td valign="top" align="left">
-        <p CLASS="Para">Drag the Repositories view and stack it with the Outline
-        view.</td>
+        <p CLASS="Para">Drag the Outline view and stack it with the Navigator view.</td>
     </tr>
     <tr>
       <td valign="top" align="left">
         <p CLASS="Para"><b>3.</b></p>
       </td>
-      <td valign="top" align="left">Choose Perspective
-        &gt; Save As...&nbsp;</td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Choose Window
+        &gt; Save Perspective As...&nbsp;</p>
+      </td>
     </tr>
     <tr>
       <td valign="top" align="left"><b>4.</b></td>
@@ -53,29 +54,43 @@ workbench also allows you to save this layout for future use.</P>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>5.</b></td>
-      <td valign="top" align="left">In the Resource perspective move
-        the Repositories view so that it is now stacked with the Tasks view.</td>
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>5.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">In the Resource perspective move
+        the Outline view so that it is now stacked with the Tasks view.</p>
+      </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>6.</b></td>
-      <td valign="top" align="left">Choose Perspective &gt; Reset.
-        Notice the Repositories view is stacked with the Outline. Originally
-        when we first started the workbench it was stacked with the Navigator,
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>6.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Choose Window &gt; Reset Perspective.
+        Notice the Outline view is stacked with the Navigator. Originally
+        when we first started the workbench it was below the Navigator,
         but because we saved the perspective with Repositories and Outline
-        stacked, it now considers this its initial layout.&nbsp;&nbsp;</td>
+        stacked, it now considers this its initial layout.&nbsp;&nbsp;</p>
+      </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>7.</b></td>
-      <td valign="top" align="left">Open a second Resource
-        perspective in the current workbench window. Observe that it uses the
-        newly saved layout.&nbsp;</td>
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>7.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Choose Window &gt; New Window to open a second window
+        showing the resource perspective. Observe that it uses the
+        newly saved layout.&nbsp;</p>
+      </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>8.</b></td>
-      <td valign="top" align="left">Close the second Resource
-        perspective by choosing Perspective &gt; Close, or choosing Close from
-        the context menu for the perspective's button on the shortcut bar.</td>
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>8.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Close the second window.</p>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -104,10 +119,11 @@ Resource perspective to its original layout proceed as follows:</p>
       <td valign="top" align="left">
         <p CLASS="Para"><b>3.</b></p>
       </td>
-      <td valign="top" align="left">Select the Resource
+      <td valign="top" align="left">
+        <p CLASS="Para">Select the Resource
         perspective and click the Reset button and then Click OK.
         <blockquote>
-        <p><img align="texttop" border="0" src="../images/Image71_pers_reset.jpg" width="410" height="224">
+        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image71_pers_reset.jpg" width="410" height="224">
         </blockquote>
       </td>
     </tr>
@@ -117,7 +133,7 @@ Resource perspective to its original layout proceed as follows:</p>
         the saved state
         of the perspective. If we also want to
         update the current copy of the Resource perspective that we are working
-        with we must also choose Perspective &gt; Reset from the workbench's menubar.&nbsp;</td>
+        with we must also choose Window &gt; Reset Perspective from the workbench's menubar.&nbsp;</td>
     </tr>
   </tbody>
 </table>
