--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
@@ -13,16 +13,12 @@ Perspectives</h2>
 <p class="Para" Type Label>A perspective defines the initial set and layout of
 views in the workbench window. One or more perspectives can exist in a single
 workbench window.&nbsp;&nbsp;</p>
-<p class="Para" Type Label>Perspectives can be opened in one of three ways:</p>
+<p class="Para" Type Label>Perspectives can be opened in one of two ways:</p>
 <ul>
   <li>
     in the same (existing) workbench window</p>
   <li>
     in a new workbench window</p>
-  <li>
-    in the same window, replacing the current
-    perspective</p>
-  </li>
 </ul>
 <p class="Para" Type Label>Perspectives define visible action sets, which you
 can change to customize a perspective.&nbsp; You can save a perspective that you
