--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -17,7 +17,7 @@ this workbench window:</p>
     Using the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" width="0" height="0">
     on the shortcut bar.</li>
   <li>
-    Choosing a perspective from the Perspective &gt; Open menu.&nbsp;</li>
+    Choosing a perspective from the Window &gt; Open Perspective menu.&nbsp;</li>
 </ul>
 <table BORDER="0" cellspacing="0" cellpadding="3">
   <thead>
@@ -37,47 +37,62 @@ this workbench window:</p>
       </td>
       <td valign="top" align="left">
         <p CLASS="Head">A menu appears showing the same choices as shown on the
-        Perspective &gt; Open. Choose Other... from the menu.</p>
+        Window &gt; Open Perspective menu. Choose Other... from the menu.</p>
         <blockquote>
           <p CLASS="Head"><img align="texttop" border="0" src="../images/Image70_shortcut3.jpg" width="0" height="0"></p>
         </blockquote>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>3.</b></td>
-      <td valign="top" align="left">In the Select Perspective dialog
-        choose Help and click OK.&nbsp;
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>3.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">In the Select Perspective dialog
+        choose Debug and click OK.&nbsp;
         <blockquote>
-        <p><img align="texttop" border="0" src="../images/Image70_select_pers.jpg" width="249" height="312">
+        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image70_select_pers.jpg" width="249" height="312">
         </blockquote>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>4.</b></td>
-      <td valign="top" align="left">Observe the Help perspective is
-        displayed.&nbsp;&nbsp;</td>
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>4.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Observe the Debug perspective is
+        displayed.&nbsp;&nbsp;</p>
+      </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>5.</b></td>
-      <td valign="top" align="left">There are several other
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>5.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">There are several other
         interesting things to take note of.&nbsp;
         <ul>
-          <li>The title of the window now indicates that we are using the Help
-            perspective.&nbsp;</li>
-          <li>The shortcut bar now contains two perspectives, the original
-            Resource perspective and the new Help perspective.&nbsp;&nbsp; The
-            Help perspective button is pressed-in indicating that it is the
+          <li>
+            <p CLASS="Para">The title of the window now indicates that we are using the
+            Debug perspective.&nbsp;</li>
+          <li>
+            <p CLASS="Para">The shortcut bar now contains two perspectives, the original
+            Resource perspective and the new Debug perspective.&nbsp;The Debug perspective button is pressed-in indicating that it is the
             current perspective.<br>
             <img align="texttop" border="0" src="../images/Image70_shortcut4.jpg" width="132" height="212"></li>
         </ul>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>6.</b></td>
-      <td valign="top" align="left">In the shortcut bar, click on the
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>6.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">In the shortcut bar, click on the
         Resource perspective button. The Resource perspective is once again our
-        current perspective. Notice that the set of views and editors is
-        different for each of the perspectives.&nbsp;</td>
+        current perspective. Notice that the set of views is
+        different for each of the perspectives.&nbsp;</p>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -89,7 +104,7 @@ will observe that our shortcut bar now has three areas:</p>
     The Open Perspective button.</li>
   <li>
     The list of open perspectives. In the figure below the
-    Resource and Help perspectives are open and the Resource perspective is our
+    Resource and Debug perspectives are open and the Resource perspective is our
     current perspective.</li>
   <li>
     The list of fast views. In the figure below there is one
@@ -99,8 +114,7 @@ will observe that our shortcut bar now has three areas:</p>
   <p CLASS="Head">
 <img align="texttop" border="0" src="../images/Image70_shortcut1.jpg" width="275" height="317">&nbsp;</p>
 </blockquote>
-<p CLASS="Head">In step 6 above we observed that the set of views and editors
-are different between the open perspectives. Similarly each perspective has its own
+<p CLASS="Head">In step 6 above we observed that the set of views are different between the open perspectives. Similarly each perspective has its own
 list of fast views.&nbsp;</p>
 <P><a href="qs-43c.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
