--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
@@ -12,22 +12,18 @@
 New windows</h3>
 <p CLASS="Head">We have just seen how to open a perspective inside the current
 workbench window. We can also open new perspectives in their own window.</p>
-<p CLASS="Head">The steps for opening a perspective in its own window are
-identical to opening a perspective in the same window with one minor difference.
-As you are choosing the perspective (either from the Open Perspective button on
-the shortcut bar or the Open &gt; Perspective menu) hold down the shift key.</p>
-<p CLASS="Head">By default, new perspectives are opened in the current window.
-If the shift key is held down it will open in a new window. You can configure
-this default behavior using Window &gt; Preferences &gt; Workbench.</p>
+<p CLASS="Head">By default, new perspectives are opened in the current window. You can configure
+this default behavior using Window &gt; Preferences &gt; Workbench &gt;
+Perspectives.</p>
 <blockquote>
 <P>&nbsp;<img align="texttop" border="0" src="../images/Image71_pers_pref.jpg" width="180" height="94">
 </P>
 
 
 </blockquote>
-<P><a href="qs-43d.htm">
+<P><a href="qs-43e.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Replacing perspectives</a></P>
+Saving perspectives</a></P>
 
 
 <P><a href="qs-43b.htm">
