--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
@@ -142,9 +142,9 @@ Resource perspective to its original layout proceed as follows:</p>
 Configuring perspectives</a>&nbsp;</P>
 
 
-<P><a href="qs-43d.htm">
+<P><a href="qs-43c.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-Replacing perspectives</a></P>
+New windows</a></P>
 
 
 <P>
